--- a/StringIsImmutable/nbproject/private/private.properties
+++ b/StringIsImmutable/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\makis\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/home/makis/.netbeans/8.2/build.properties
